--- a/pymakr.conf
+++ b/pymakr.conf
@@ -4,7 +4,7 @@
     ],
     "username": "micro",
     "password": "python",
-    "sync_folder": "E:\Myfolder\Free\upwork\Tealcom\GpyExp3\GpyReadCer",
+    "sync_folder": "connectAWS_Gpy",
     "sync_file_types": [
         "py",
         "txt",
